--- a/Atividade 03/biblioteca.html
+++ b/Atividade 03/biblioteca.html
@@ -7,13 +7,10 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
- <header> 
-<h1></h1>
- </header>
-<main>
 
 
-<table align="center">       
+
+<table align="center">  
 <thead>
 <tr>
 <th>
@@ -33,68 +30,37 @@
 </th>
 
 
+</table>
 
 
 
 
-<table border="1px" align="center">
- 
+
 <h2 id="livro">Lista de livros</h2>
-<table border="1px" align="center">
-    <tr id="tr1">     
-<td>
-  <h1> 
- Título   
-<th>
-<td>
-<h1>
- Autor   
-<th>
-<td>
-<h1>  
- Ano   
-<th>
-<tr id="tr2">
-<td>
- <h2>  
- O Pequeno príncipe   
-<th>
-<td>
-  <h2>  
- Antoine de Saint-Exupéry   
-<th>
-<td>
-    <h2>
- 1943
- <th>
-<tr
+<table border="1px" align="center" id="principal">
+
+  <tr id="tr1">
+      <th>Título</th>
+      <th>Autor</th>
+      <th>Ano</th>
+  </tr>
+  <tr>
+      <th>O Pequeno príncipe</th>
+      <th> Antoine de Saint-Exupéry</th>
+      <th>1943</th>
+  </tr>
+  <tr id="tr2">
+      <th>Neuromancer</th>
+      <th>William Gilbson</th>
+      <th>1984</th>
+  </tr>
+  <tr>
+      <th>Dom Casmurro</th>
+      <th>Machado de Assis</th>
+      <th>1899</th>
+  </tr>
+</table>
 
 
-<th>
-
-   
-<th>
-    <h2>
- Dom Casmurro   
-<td>
-   
-<th>
-    <h2>
-Machado de Assis
-<th>
-     <h2>
-  1899  
-<td>
- <tr>  
-<th>
-    <h2>
-Neuromancer
-<td>
-<th>
-<h2>
-William Gilbson
-<td>
- <th>  
-  <h2>
-1984
- <td>
+</body>
+</html>
